--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="container">
             <div class="todo-app">
-                <h2>To-Do List <img src="images/icon.png" alt="list icon"></h2>
+                <h2>To-Do List <img src="icon.png" alt="list icon"></h2>
                 <div class="row">
                     <input type="text" id="input-box" placeholder="Add your text">
                     <button onclick="addTask()">Add</button>
